# AI-Hub

./: .gitignore  Modelfile  README.md  crew.ipynb  ollama-agent.ipynb  ollama-autogen.ipynb  ollama-langgraph-agent.ipynb  ollama-langraph-agent.ipynb  ollama-react-agent.ipynb  openai-chain-agent.ipynb  pyproject.toml
.cache/41/: cache.db
chat/: deepseek-coder.py  together-ai.py
extraction/: pdf.py  structured_output.py
knowledge_graph/: knowledge_graph_lang.py  knowledge_graph_llama.py
ollama_agent/: agent_graph.py  agent_tools.py  agent_workflow.py  llm.py  llms.py  main.py
ollama_agent/nodes/: agent_node.py  answer_node.py
speech/: ollama-tts.py  speech-text.py  transcript-client.py  transcript-server.py
vector_db/: delete_namespace.py
vision/: object_detection.py  train.py
vision-chat/: llava-chat.py
vision/models/: yolov8n.yaml
