[tool.poetry]
name = "training"
version = "0.1.0"
description = ""
authors = ["brown"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = "^1.0.0"
huggingface-hub = "^0.20.3"
gtts = "^2.5.1"
pyttsx3 = "^2.90"
speechrecognition = "^3.10.1"
jupyter = "^1.0.0"
langchain-openai = "^0.1.10"
langgraph = "^0.1.2"
langchain-ollama = "^0.1.0"
pillow = "^10.4.0"
crewai = {extras = ["tools"], version = "^0.41.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-include = ["*.ipynb"]